# kestrel

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
configs/: default.json  fault-alert.json  fault-basic.json
core/: CMakeLists.txt  main.cpp
core/engine/: engine.cpp  engine.h  measurement_window.cpp  measurement_window.h  system_state.h
core/fault/: fault_injector.cpp  fault_injector.h  fault_profile.cpp  fault_profile.h
core/logging/: logger.cpp  logger.h
core/rules/: implausible_value_rule.cpp  implausible_value_rule.h  missing_data_rule.cpp  missing_data_rule.h  rate_of_change_rule.cpp  rate_of_change_rule.h  rule.h  threshold_rule.cpp  threshold_rule.h
core/sensors/: sensor.h  sensor_manager.cpp  sensor_manager.h
core/sensors/mac/: battery_sensor.cpp  battery_sensor.h  cpu_load_sensor.cpp  cpu_load_sensor.h  memory_sensor.cpp  memory_sensor.h  storage_sensor.cpp  storage_sensor.h
docs/: tech-spec.md  verification-log.md
macos-app/: Package.swift
macos-app/Resources/: AppIcon.icns
macos-app/Sources/KestrelBar/: AppDelegate.swift  BadgeView.swift  CoreProcess.swift  ResolutionLog.swift  SensorDiagnostics.swift
macos-app/Sources/KestrelBarLib/: SensorDiagnostics.swift
macos-app/Tests/KestrelBarLibTests/: SensorDiagnosticsTests.swift
scripts/: generate-icon.swift  install.sh
tests/: CMakeLists.txt
tests/fault/: test_fault_injection.cpp
tests/integration/: test_end_to_end.cpp
tests/unit/: test_engine.cpp  test_fault_profile.cpp  test_logger.cpp  test_measurement_window.cpp  test_rules.cpp  test_sensor_manager.cpp
